--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "kababjees-kfc-ai",
   "private": true,
@@ -10,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.34.0",
+    "@google/generative-ai": "^0.24.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.0",
-    "@google/genai": "^1.34.0"
+    "react-router-dom": "^7.1.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
